--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/indexCss.css">
+    <link rel="stylesheet" href="./CSS/indexCss.css">
     <title>Inec Portal/clone</title>
   </head>
   <body>
@@ -67,7 +67,7 @@
       <nav class="navbar navbar-expand-lg navbar-light  myNav sticky-top bg-white shadow " >
         <div class="container">
           <div>
-            <img id="churchlogo" src="../Inec pictures/logo.webp"  alt="" class="navLogo">
+            <img id="churchlogo" src="./Inec pictures/logo.webp"  alt="" class="navLogo">
          
           </div>
                            
