--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
       <div  class="chairmanMessage">
         <div class="chairmanpics">
-            <img src="../Inec pictures/welcome2.jpg"/>
+            <img src="./Inec pictures/welcome2.jpg"/>
         </div>
         <div class="chairmanmessagedetails">
             <p>I am pleased to introduce the Commission's online portal for the Continuous Voter Registration (CVR).
@@ -186,7 +186,7 @@
    <div class="footermother">
 
       <div class="foot1">
-        <img src="../Inec pictures/logo.webp"/>
+        <img src="./Inec pictures/logo.webp"/>
         <p>The Independent National Electoral Commission (INEC) was established by the 1999 Constitution of the Federal Republic of Nigeria to organize elections in various political offices in the country.</p>
       </div>
       <div class="foot2">
